--- a/.config/bat/config
+++ b/.config/bat/config
@@ -8,7 +8,7 @@
 
 # Specify desired highlighting theme (e.g. "TwoDark"). Run `bat --list-themes`
 # for a list of all available themes
---theme="catppuccin-mocha"
+--theme="catppuccin-macchiato"
 --color=always
 
 # Enable this to use italic text on the terminal. This is not supported on all
