--- a/.gitconfig
+++ b/.gitconfig
@@ -11,8 +11,12 @@
 
 [delta]
     tabs = 6
-    ; navigate = true
     side-by-side = true
+    ; line-numbers = true
+
+    navigate = true
+    file-modified-label = "~"
+
     syntax-theme = catppuccin-macchiato
 
     plus-style = syntax "#3b474a"
@@ -57,14 +61,15 @@
     sw = switch
     br = branch --format '%(color:red)%(HEAD)%(color:white) %(align:30)%(refname:short)%(end) %(align:30)%(color:blue)%(upstream:short)%(color:white) %(color:magenta)%(upstream:track)%(color:white)%(end)'
 
-    dt = difftool
-    mt = mergetool
+    rs = restore --staged
 
     d = diff
     ds = diff --staged
 
     l = log --all --graph -n 15
     ll = log --all --graph
+
+    st = "status"
 
     amend = commit --amend --no-edit
     ignore = !git rm -r --cached . && git add -A
