--- a/.ssh/config
+++ b/.ssh/config
@@ -2,6 +2,14 @@ Host *
     AddKeysToAgent yes
     UseKeychain yes
 
+Host gigz
+    Hostname 82.126.253.221
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/gigz
+
+    Port 777
+    User alexis
+
 Host github.com
     Hostname github.com
     PreferredAuthentications publickey
