improv(tmux): improved tmux-switch function

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -112,7 +112,7 @@ bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
 # Launches fish functions to manage sessions
-bind-key o run-shell "fish -c tmux-switch"
+bind-key o display-popup -E "fish -c tmux-switch"
 
 # Create a new empty session with the given name
 bind-key i command-prompt -p "(create-session)" "new-session -A -c ${HOME}/dev -s %%"
