feat(neovim): added ftplugin lua files

--- a/.config/bat/config
+++ b/.config/bat/config
@@ -14,3 +14,6 @@
 # Enable this to use italic text on the terminal. This is not supported on all
 # terminal emulators (like tmux, by default):
 --italic-text=never
+
+# Additional pattern to syntax mappings
+--map-syntax='justfile:Makefile'
