--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,10 @@ root = true
 indent_style = tab
 indent_size = 2
 
+[*.{html,css}]
+indent_style = space
+indent_size = 2
+
 [*.py]
 indent_style = space
 indent_size = 4
