feat: added alias 'git bd'

--- a/.gitconfig
+++ b/.gitconfig
@@ -60,6 +60,7 @@
 
     sw = switch
     b = branch
+    bd = branch -d
     bl = branch --all --format '%(color:red)%(HEAD)%(color:white) %(align:30)%(refname:short)%(end) %(align:30)%(color:blue)%(upstream:short)%(color:white) %(color:magenta)%(upstream:track)%(color:white)%(end)'
 
     rs = restore
