feat(fish): updated widgets functions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -114,10 +114,11 @@ bind -r > swap-window -d -t +1
 # Launches fish functions to manage sessions
 bind-key o display-popup -E "fish -c tmux-switch"
 
-# Create a new empty session with the given name
-bind-key i command-prompt -p "(create-session)" "new-session -A -c ${HOME}/dev -s %%"
+# Create/switch to a session based on a local project
+bind-key e display-popup -E "pm switch"
 
-bind-key T break-pane
+# Create a new empty project and go there
+bind-key i display-popup -E "pm new"
 
 bind-key V copy-mode
 bind-key P paste-buffer
