feat(tmux): added tmux bindings for pm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -112,13 +112,13 @@ bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
 # Launches fish functions to manage sessions
-bind-key o display-popup -E "fish -c tmux-switch"
+bind-key Tab display-popup -E "fish -c tmux-switch"
 
 # Create/switch to a session based on a local project
-bind-key e display-popup -E "pm switch"
+bind-key o display-popup -E "pm open"
 
 # Create a new empty project and go there
-bind-key i display-popup -E "pm new"
+bind-key - display-popup -E "pm new"
 
 bind-key V copy-mode
 bind-key P paste-buffer
