chore(neovim): remove K to hover with LSP (default)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -120,5 +120,8 @@ bind-key o display-popup -E "pm open"
 # Create a new empty project and go there
 bind-key - display-popup -E "pm new"
 
+# Open a popup window
+bind-key t display-popup -E "fish"
+
 bind-key V copy-mode
 bind-key P paste-buffer
