feat: added tmux popup window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -120,8 +120,11 @@ bind-key o display-popup -E "pm open"
 # Create a new empty project and go there
 bind-key - display-popup -E "pm new"
 
-# Open a popup window
-bind-key t display-popup -E "fish"
+# Open a (floatting) popup window
+bind-key f display-popup -E -d "#{pane_current_path}" "fish"
+
+# Edit dotfiles
+bind-key e display-popup -w150 -h40 -E "fish -c dot-edit"
 
 bind-key V copy-mode
 bind-key P paste-buffer
