feat: added go version 1.21 to asdf

--- a/.ssh/config
+++ b/.ssh/config
@@ -10,12 +10,12 @@ Host gigz
     Port 777
     User alexis
 
-Host github-personal
+Host github.com
     Hostname github.com
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/github
 
-Host github.com
+Host github-unifox
     Hostname github.com
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/unifox
