feat(settings): update mini.tabline colorscheme + more dump more osx settings

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,7 +1,7 @@
 format = """
 $directory\
 $git_branch$git_state$git_status\
-$python$nodejs$lua\
+$python$nodejs$lua$golang\
 $character
 """
 
@@ -50,10 +50,14 @@ style = "yellow"
 symbol = "lua "
 style = "yellow"
 
+[golang]
+symbol = "go "
+style = "yellow"
+
 [character]
 # ❯ or ➜
 success_symbol = "[➜](white)"
-error_symbol = "[➜](yellow)"
+error_symbol = "[➜](red)"
 
 vimcmd_symbol = "[N](green)"
 vimcmd_visual_symbol = "[V](purple)"
