--- a/.tmux.conf
+++ b/.tmux.conf
@@ -112,13 +112,13 @@ bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
 # Launches fish functions to manage sessions
-bind-key Tab display-popup -E "fish -c tmux-switch"
+bind-key a display-popup -E "fish -c tmux-switch"
 
 # Create/switch to a session based on a local project
-bind-key o display-popup -E "pm open"
+bind-key o display-popup -E "pm tmux open"
 
 # Create a new empty project and go there
-bind-key - display-popup -E "pm new"
+bind-key - display-popup -E "pm tmux new"
 
 # Open a (floatting) popup window
 bind-key f display-popup -E -d "#{pane_current_path}" "fish"
