--- a/.gitconfig
+++ b/.gitconfig
@@ -80,6 +80,7 @@
 
     this = !git init && git add -A && git commit -m 'feat: initial commit'
     oops = !git stash && git switch -c oops && git stash pop
+	lr = log -n 8
 
 [format]
     pretty = format:%C(auto)%h [%D] %C(brightblue)%an%C(reset) %s %C(bold black)%cr%C(reset)
