--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,15 +54,15 @@ set -g message-command-style fg=colour3
 set -g mode-style fg=colour5
 
 # tell Tmux that outside terminal supports true color
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color*:Tc"
+set -g default-terminal "tmux-256color"
+# set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # Formats
 set -g window-status-style fg=colour8
-set -g window-status-format "#[fg=colour2]#I#[fg=default]:#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
+set -g window-status-format "#[fg=default,italics]#W#[fg=colour1]#{?window_zoomed_flag,Z, } "
 
 set -g window-status-current-style fg=colour7
-set -g window-status-current-format "#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
+set -g window-status-current-format "#W#{?window_zoomed_flag,#[fg=colour1]\[Z\], } "
 
 set -g pane-border-style "fg=#181926"
 set -g pane-active-border-style "fg=#181926"
@@ -115,10 +115,10 @@ bind -r > swap-window -d -t +1
 bind-key a display-popup -E "fish -c tmux-switch"
 
 # Create/switch to a session based on a local project
-bind-key o display-popup -E "pm tmux open"
+bind-key o display-popup -E "pm open"
 
 # Create a new empty project and go there
-bind-key - display-popup -E "pm tmux new"
+bind-key - display-popup -E "pm new"
 
 # Open a (floatting) popup window
 bind-key f display-popup -E -d "#{pane_current_path}" "fish"
