feat: add cobra config, fix tmux keybindings & update-neovim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -118,7 +118,7 @@ bind-key a display-popup -E "fish -c tmux-switch"
 bind-key o display-popup -E "pm open"
 
 # Create a new empty project and go there
-bind-key - display-popup -E "pm new"
+bind-key - display-popup -E "pm tmux new"
 
 # Open a (floatting) popup window
 bind-key f display-popup -E -d "#{pane_current_path}" "fish"
