--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,7 @@ set -g mode-style fg=colour5
 
 # tell Tmux that outside terminal supports true color
 set -g default-terminal "tmux-256color"
-# set -ga terminal-overrides ",xterm-256color*:Tc"
+set -ga terminal-overrides ",xterm*:Tc:sitm=\E[3m"
 
 # Formats
 set -g window-status-style fg=colour8
