--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,7 @@ set -g mode-style fg=colour5
 
 # tell Tmux that outside terminal supports true color
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm*:Tc:sitm=\E[3m"
+set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # Formats
 set -g window-status-style fg=colour8
@@ -115,7 +115,7 @@ bind -r > swap-window -d -t +1
 bind-key a display-popup -E "fish -c tmux-switch"
 
 # Create/switch to a session based on a local project
-bind-key o display-popup -E "pm open"
+bind-key o display-popup -E "fish -c tmux-pm-open"
 
 # Create a new empty project and go there
 bind-key - display-popup -E "pm tmux new"
