feat(starship): add git symbol for renamed indices

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -36,7 +36,7 @@ untracked = "…$count"
 modified = "~$count"
 
 deleted = "-$count"
-renamed = "$count"
+renamed = "*$count"
 
 [python]
 symbol = "python "
