feat: add gitsigns and change direnv config

--- a/.config/pm/config.yaml
+++ b/.config/pm/config.yaml
@@ -1,6 +1,8 @@
-default: personal
+default: default
+default_space: personal
 home: /Users/alexis/dev
 spaces:
-    - default
     - personal
     - epitech
+    - tools
+    - advent-of-code
