feat(nvim): added more keymaps for mini.pick

--- a/.config/pm/config.yaml
+++ b/.config/pm/config.yaml
@@ -1,8 +1,12 @@
-default: default
-default_space: personal
+defaultSpace: personal
 home: /Users/alexis/dev
 spaces:
     - personal
     - unifox
     - advent-of-code
     - epitech
+templates:
+    cargo-new:
+        commands:
+            - cargo new PATH
+        frominside: false
