feat(neovim): changed pm config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -126,5 +126,7 @@ bind-key f display-popup -E -d "#{pane_current_path}" "fish"
 # Edit dotfiles
 bind-key e display-popup -w150 -h40 -E "fish -c dot-edit"
 
+bind-key T break-pane
+
 bind-key V copy-mode
 bind-key P paste-buffer
