--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,23 +1,27 @@
-env:
-  XTERM: xterm-256color
+# env:
+#   XTERM: xterm-256color
 
 window:
   decorations: none
+  padding:
+    x: 10
+    y: 5
 
 font:
-  size: 13
+  size: 14
+  use_thin_stroke: true
 
 colors:
   primary:
     background: '#24273a'
-    foreground: '#e0e0e0'
+    foreground: '#cad3f5'
 
   normal:
     black:   '#3f3f3f'
-    red:     '#b06060'
-    green:   '#60b47a'
-    yellow:  '#dfaf8f'
-    blue:    '#506080'
-    magenta: '#dc9cc3'
-    cyan:    '#8cd0d8'
+    red:     '#ed8796'
+    green:   '#a5d885'
+    yellow:  '#eed49f'
+    blue:    '#8aadf4'
+    magenta: '#c6a0f6'
+    cyan:    '#7dc4e4'
     white:   '#ffffff'
