--- a/.config/pm/config.json
+++ b/.config/pm/config.json
@@ -1,67 +1,76 @@
 {
-  "global": {
-    "home": "/Users/alexis/dev"
-  },
-  "spaces": {
-    "default": "personal",
-    "list": [
-      "default",
-      "playground",
-      "personal",
-      "three-js-journey"
-    ]
-  },
-  "templates": {
-    "cargo": [
-      {
-        "command": [
-          "cargo",
-          "new",
-          "{project}"
-        ],
-        "dir": "SPACE"
-      }
-    ],
-    "default": [
-      {
-        "command": [
-          "mkdir",
-          "{project}"
-        ],
-        "dir": "SPACE"
-      },
-      {
-        "command": [
-          "git",
-          "init"
-        ],
-        "dir": "PROJECT"
-      }
-    ],
-    "golang": [
-      {
-        "command": [
-          "mkdir",
-          "{project}"
-        ],
-        "dir": "SPACE"
-      },
-      {
-        "command": [
-          "go",
-          "mod",
-          "init",
-          "github.com/alexis-moins/{project}"
-        ],
-        "dir": "PROJECT"
-      },
-      {
-        "command": [
-          "git",
-          "init"
-        ],
-        "dir": "PROJECT"
-      }
-    ]
-  }
+	"global": {
+		"home": "/Users/alexis/dev",
+		"colors": {
+			"comment": "#6e738d",
+			"success": "#a6da95",
+			"error": "#ed8796",
+			"suggestion": "#eed49f"
+		}
+	},
+	"spaces": {
+		"default": "personal",
+		"list": ["default", "advent-of-code", "personal", "epitech"]
+	},
+	"templates": {
+		"cargo": [
+			{
+				"command": ["cargo", "new", "{project}"],
+				"dir": "SPACE"
+			}
+		],
+		"default": [
+			{
+				"command": ["mkdir", "{project}"],
+				"dir": "SPACE"
+			},
+			{
+				"command": ["git", "init"],
+				"dir": "PROJECT"
+			}
+		],
+		"golang": [
+			{
+				"command": ["mkdir", "{project}"],
+				"dir": "SPACE"
+			},
+			{
+				"command": ["go", "mod", "init", "github.com/alexis-moins/{project}"],
+				"dir": "PROJECT"
+			},
+			{
+				"command": ["git", "init"],
+				"dir": "PROJECT"
+			}
+		],
+		"cobra-cli": [
+			{
+				"command": ["mkdir", "{project}"],
+				"dir": "SPACE"
+			},
+			{
+				"command": ["go", "mod", "init", "github.com/alexis-moins/{project}"],
+				"dir": "PROJECT"
+			},
+			{
+				"command": ["git", "init"],
+				"dir": "PROJECT"
+			},
+			{
+				"command": ["cobra-cli", "init", "{project}"],
+				"dir": "PROJECT"
+			}
+		],
+		"laravel": [
+			{
+				"command": [
+					"composer",
+					"create-project",
+					"laravel/laravel",
+					"{project}"
+				],
+				"dir": "SPACE"
+			}
+		]
+	}
 }
