--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,7 +65,9 @@ set -g window-status-current-style fg=colour7
 set -g window-status-current-format "#W#{?window_zoomed_flag,#[fg=colour1]\[Z\], } "
 
 set -g pane-border-style "fg=#181926"
-set -g pane-active-border-style "fg=#181926"
+set -g pane-active-border-style "fg=#494d64"
+
+set -g pane-border-lines "heavy"
 
 # Keybindings
 # Use 'r' to source the tmux config file
