--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,7 +1,7 @@
 format = """
 $directory\
 $git_branch$git_state$git_status\
-$python$nodejs$golang$elixir\
+$python\
 $character
 """
 
@@ -26,6 +26,7 @@ style = "purple"
 
 [git_status]
 style = "red"
+# format = '[($conflicted )($stashed )($deleted )($renamed )($modified )($staged )($untracked )]($style)'
 
 diverged = "$ahead$behind"
 ahead = "↑$count"
@@ -41,7 +42,10 @@ renamed = "*$count"
 
 [python]
 format = '[(\($virtualenv\) )]($style)'
-style = "bright-black"
+style = "#6e738d"
+
+[nodejs]
+symbol = ""
 
 [golang]
 symbol = "go "
