feat: added custom catppuccin-macchiato nvim theme

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,20 +2,12 @@ Host *
     AddKeysToAgent yes
     UseKeychain yes
 
-Host gigz
-    Hostname 82.126.253.221
-    PreferredAuthentications publickey
-    IdentityFile ~/.ssh/gigz
-
-    Port 777
-    User alexis
-
 Host github.com
     Hostname github.com
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/github
 
-Host github-unifox
+Host github-improba
     Hostname github.com
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/unifox
+    IdentityFile ~/.ssh/improba
