feat: add more lsp servers

--- a/.config/pm/config.json
+++ b/.config/pm/config.json
@@ -93,6 +93,23 @@
         "dir": "PROJECT"
       }
     ],
+    "elixir": [
+      {
+        "command": [
+          "mix",
+          "new",
+          "{project}"
+        ],
+        "dir": "SPACE"
+      },
+      {
+        "command": [
+          "git",
+          "init"
+        ],
+        "dir": "PROJECT"
+      }
+    ],
     "gleam": [
       {
         "command": [
