--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,13 +117,7 @@ bind -r > swap-window -d -t +1
 bind-key a display-popup -E "fish -c tmux-switch"
 
 # Create/switch to a session based on a local project
-bind-key o display-popup -E "fish -c tmux-pm-open"
-
-# Create a new empty project and go there
-bind-key - display-popup -E "pm tmux new"
-
-# Open a (floatting) popup window
-bind-key f display-popup -E -d "#{pane_current_path}" "fish"
+bind-key o display-popup -E "pm open"
 
 # Edit dotfiles
 bind-key e display-popup -w150 -h40 -E "fish -c dot-edit"
