feat: add scripts install dir env var in fish

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -114,13 +114,13 @@ bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
 # Launches fish functions to manage sessions
-bind-key a display-popup -E "fish -c tmux-switch"
+bind-key a display-popup -E "tmux-switch"
 
 # Create/switch to a session based on a local project
 bind-key o display-popup -E "pm open"
 
 # Edit dotfiles
-bind-key e display-popup -w150 -h40 -E "fish -c dot-edit"
+bind-key e display-popup -w150 -h40 -E "dot edit"
 
 bind-key T break-pane
 
