feat: add a bunch of new scripts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,12 +54,12 @@ set -g message-command-style fg=colour3
 set -g mode-style fg=colour5
 
 # tell Tmux that outside terminal supports true color
-# set -g default-terminal "tmux-256color"
+set -g default-terminal "tmux-256color"
 # set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # Use alacritty's format
-set -g default-terminal "$TERM"
-set -ag terminal-overrides ",$TERM:Tc"
+# set -g default-terminal "$TERM"
+# set -ag terminal-overrides ",$TERM:Tc"
 
 # Formats
 set -g window-status-style fg=colour8
