chore: update inputrc

--- a/.inputrc
+++ b/.inputrc
@@ -1,1 +1,9 @@
 C-L: clear-screen
+TAB: menu-complete
+
+set colored-stats on
+
+set show-all-if-ambiguous on
+set completion-ignore-case on
+
+set mark-directories off
