chore: add S-Tab mapping for backward menu complete in bash

--- a/.inputrc
+++ b/.inputrc
@@ -1,9 +1,18 @@
 C-L: clear-screen
+
 TAB: menu-complete
+"\e[Z": menu-complete-backward
 
 set colored-stats on
 
 set show-all-if-ambiguous on
+set colored-completion-prefix on
+
+set menu-complete-display-prefix on
+
 set completion-ignore-case on
+set completion-map-case on
 
 set mark-directories off
+
+set echo-control-characters off
