--- a/.gitconfig
+++ b/.gitconfig
@@ -61,8 +61,9 @@
     blr = branch --remote --format '%(color:red)[%(HEAD)]%(color:white) %(refname:short) %(color:blue)%(authorname) %(color:bold black)%(committerdate:relative)'
 
     bd = branch --delete
-    bd = branch -D
-    bm = branch --move
+
+    rn = branch --move
+    rename = branch --move
 
     rs = restore
 
