--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,8 @@ bind-key 'C-a' send-prefix
 set -g escape-time 0
 set -g focus-events on
 
+set -g default-command $SHELL
+
 set -g mouse on
 set -g cursor-style blinking-bar
 
@@ -54,12 +56,12 @@ set -g message-command-style fg=colour3
 set -g mode-style fg=colour5
 
 # tell Tmux that outside terminal supports true color
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm-256color*:Tc"
+# set -g default-terminal "xterm-256color"
+# set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # Use alacritty's format
-# set -g default-terminal "$TERM"
-# set -ag terminal-overrides ",$TERM:Tc"
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
 
 # Formats
 set -g window-status-style fg=colour8
