--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ indent_size = 2
 indent_style = tab
 indent_size = 4
 
-[*.{html,css,ml,c}]
+[*.{html,css,ml,c,h}]
 indent_style = space
 indent_size = 2
 
