--- a/.gitconfig
+++ b/.gitconfig
@@ -32,6 +32,9 @@
     colorMoved = default
 	mnemonicPrefix = true
 
+[interactive]
+    diffFilter = delta --color-only
+
 [color "diff"]
     meta = bold black
 
@@ -46,7 +49,7 @@
     keepBackup = false
 
 [rerere]
-    enabled = 1
+    enabled = true
 
 [alias]
     ci = commit
