docs(zkcj): zcze

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -123,7 +123,7 @@ bind -r > swap-window -d -t +1
 bind-key a display-popup -E "tmux-switch"
 
 # Create/switch to a session based on a local project
-bind-key o display-popup -E "pm open"
+bind-key o display-popup -E "pm-open"
 
 # Edit dotfiles
 bind-key e display-popup -w150 -h40 -E "dot edit"
