--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ bind-key 'C-a' send-prefix
 set -g escape-time 0
 set -g focus-events on
 
-set -g default-command $SHELL
+set -g default-command fish
 
 set -g mouse on
 set -g cursor-style blinking-bar
