--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,10 +65,10 @@ set -ag terminal-overrides ",$TERM:Tc"
 
 # Formats
 set -g window-status-style fg=colour8
-set -g window-status-format "#[fg=default,italics]#W#[fg=colour1]#{?window_zoomed_flag,Z, } "
+set -g window-status-format "#[fg=default,italics]#W#[fg=colour2]#F "
 
 set -g window-status-current-style fg=colour7
-set -g window-status-current-format "#W#{?window_zoomed_flag,#[fg=colour1]\[Z\], } "
+set -g window-status-current-format "#W#[fg=colour2]#F "
 
 set -g pane-border-style "fg=#181926"
 set -g pane-active-border-style "fg=#494d64"
